# embedded-plots

./: Cargo.toml
examples/: free_axis.rs  multiple_curves.rs  single_plot_mono.rs  single_plot_rgb.rs
src/: axis.rs  curve.rs  lib.rs  range_conv.rs  single_plot.rs
