[package]
name = "embedded-plots"
version = "0.1.1"
authors = ["Michał Chodzikiewicz <mchodzikiewicz@gmail.com>"]
edition = "2018"
license = "LGPL-2.1-only"
description = "Heapless plotting library for embedded targets based on embedded-graphics crate"
homepage = "https://gitlab.com/mchodzikiewicz/embedded-plots"
repository = "https://gitlab.com/mchodzikiewicz/embedded-plots"
readme = "README.md"
keywords = ["embedded", "plot", "graphics"]
categories = ["embedded","visualization","no-std","graphics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-graphics = "0.6.0"
itertools = {version = "0.9.0", default-features = false}
heapless = "0.5.6"

[dev-dependencies]
embedded-graphics-simulator = "0.2.1"
test-case = "1.0.0"
